<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделится приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="intent_share_app">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="intent_share_app_header">Поделиться приложением</string>
    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_email">d.vladimir.ymb@yandex.ru</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="user_agreement_website">https://yandex.ru/legal/practicum_offer/</string>
    <string name="clear_text">Очистить текст</string>
    <string name="mailto_intent_data">mailto:</string>
    <string name="nothing_was_found">Ничего не нашлось</string>
    <string name="communication_problems">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update_search">Обновить</string>
    <string name="history_txt">История поиска</string>
    <string name="clear_history">Очистить историю</string>
    <string name="track_time_title">Длительность</string>
    <string name="collection_name_title">Альбом</string>
    <string name="release_date_title">Год</string>
    <string name="primary_genre_name_title">Жанр</string>
    <string name="country_title">Страна</string>
    <string name="player_open_error_dialog_title">Ошибка при открытии</string>
    <string name="player_open_error_dialog_message">Отстствуют данные о треке\nДальнейшая работа не возможна</string>
    <string name="player_open_error_dialog_positive_btn">Продолжить</string>
    <string name="player_track_play_time">00:00</string>
    <string name="player_track_added_to_playlist">Добавлено в плейлист %s</string>
    <string name="player_track_was_found_in_playlist">Трек уже добавлен в плейлист %s</string>
    <string name="base_url">https://itunes.apple.com</string>
    <string name="favorites_missing">Ваша медиатека пуста</string>
    <string name="playlists_missing">Вы не создали\n ни одного плейлиста</string>
    <string name="playlists_new">Новый плейлист</string>
    <string name="playlists_edit">Редактировать</string>
    <string name="playlists_add">Добавить в плейлист</string>
    <string name="playlists_track_nominative_singular">%s трек</string>
    <string name="playlists_track_genitive_plural">%s треков</string>
    <string name="playlists_track_genitive_singular">%s трека</string>
    <string name="playlists_minute_nominative_singular">%s минута</string>
    <string name="playlists_minute_genitive_plural">%s минут</string>
    <string name="playlists_minute_genitive_singular">%s минуты</string>
    <string name="media_library_tab_favorite_tracks">Избранные треки</string>
    <string name="media_library_tab_playlists">Плейлисты</string>
    <string name="playlist_create_btn">Создать</string>
    <string name="playlist_create_btn_edit">Сохранить</string>
    <string name="playlist_name_txt">Название*</string>
    <string name="playlist_description_txt">Описание</string>
    <string name="playlist_dialog_title">Завершить создание плейлиста?</string>
    <string name="playlist_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="playlist_dialog_neutral_btn">Отмена</string>
    <string name="playlist_dialog_positive_btn">Завершить</string>
    <string name="playlist_read_external_storage_permission_is_required">Для выбора обложки необходимо разрешение для работы с хранилищем</string>
    <string name="playlist_was_created_successfully">Плейлист %s создан</string>
    <string name="playlist_could_not_place_cover_in_vault">Не удалось поместить обложку в хранилище. Необходимо выбрать другое изображение</string>
    <string name="dir_playlist_covers">playlist_covers</string>
    <string name="playlist_details_totals">%s • %s</string>
    <string name="playlist_details_more_share">Поделиться</string>
    <string name="playlist_details_more_edit">Редактировать информацию</string>
    <string name="playlist_details_more_delete">Удалить плейлист</string>
    <string name="playlist_details_track_delete">Хотите удалить трек?</string>
    <string name="playlist_details_playlist_delete">Хотите удалить плейлист «%s»?</string>
    <string name="playlist_details_dialog_negative_btn">Нет</string>
    <string name="playlist_details_dialog_indent">\n\n</string>
    <string name="playlist_details_dialog_positive_btn">Да</string>
</resources>