<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/media_library"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".mediaLibrary.ui.MediaLibraryFragment">

    <com.google.android.material.appbar.MaterialToolbar
        style="@style/MediaLibraryToolbar"
        android:id="@+id/tb_media_library"
        app:title="@string/media_library" />

    <com.google.android.material.tabs.TabLayout
        style="@style/MediaLibraryTabLayout"
        android:id="@+id/tabLayout"
        app:tabInlineLabel="true">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/media_library_tab_favorite_tracks"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/media_library_tab_playlists"/>

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>