<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".search.ui.SearchFragment">

    <com.google.android.material.appbar.MaterialToolbar
        style="@style/SearchToolbar"
        android:id="@+id/tb_search"
        app:title="@string/search"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <FrameLayout
        android:id="@+id/frlSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/rounded_edittext"
        android:layout_marginVertical="@dimen/small_indentation"
        android:layout_marginHorizontal="@dimen/standard_indentation"
        app:layout_constraintTop_toBottomOf="@id/tb_search"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            style="@style/SearchColor"
            android:id="@+id/inputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/track_image_size"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_find"
            android:drawablePadding="@dimen/small_indentation"
            android:layout_marginStart="@dimen/img_padding"
            android:background="@null"
            android:hint="@string/search"
            android:inputType="text"
            android:maxLength="100"
            android:maxLines="1"
            android:minHeight="48dp"
            android:imeOptions="actionDone"
            android:singleLine="true"/>

        <ImageView
            style="@style/SearchColor"
            android:id="@+id/clearIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:contentDescription="@string/clear_text"
            android:layout_marginEnd="@dimen/img_padding"
            android:src="@drawable/ic_clear"
            android:visibility="gone" />
    </FrameLayout>

    <TextView
        style="@style/TxtPlaceholder"
        android:id="@+id/txtHistory"
        android:text="@string/history_txt"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/frlSearch"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        style="@style/TrackRecyclerView"
        android:id="@+id/recyclerView"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtHistory"
        app:layout_constrainedHeight="true"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/btnClearHistory"/>

    <Button
        style="@style/BtnPlaceholder"
        android:id="@+id/btnClearHistory"
        android:text="@string/clear_history"
        android:visibility="gone"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerView"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <LinearLayout
        style="@style/LinearLayoutPlaceholder"
        android:id="@+id/msgNothingWasFound"
        app:layout_constraintTop_toBottomOf="@id/tb_search"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            style="@style/ImgPlaceholder"
            android:src="@drawable/ic_nothing_was_found"/>

        <TextView
            style="@style/TxtPlaceholder"
            android:text="@string/nothing_was_found"/>

    </LinearLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        style="@style/SearchProgressBar"
        android:id="@+id/progressBar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@id/tb_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        style="@style/LinearLayoutPlaceholder"
        android:id="@+id/msgCommunicationProblems"
        app:layout_constraintTop_toBottomOf="@id/tb_search"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            style="@style/ImgPlaceholder"
            android:src="@drawable/ic_communication_problems"/>

        <TextView
            style="@style/TxtPlaceholder"
            android:text="@string/communication_problems"/>

        <Button
            style="@style/BtnPlaceholder"
            android:id="@+id/btnUpdateSearch"
            android:text="@string/update_search"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>