<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheetPlayListMore"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_bottomsheet"
    app:behavior_hideable="true"
    app:behavior_peekHeight="390dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <View
        android:id="@+id/rectangleBottomSheetPlayListMore"
        android:layout_width="50dp"
        android:layout_height="4dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_rectangle_bottomsheet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        style="@style/PlayListDetailsRcv"
        android:id="@+id/rcvBottomSheetPlayListMore"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rectangleBottomSheetPlayListMore"/>

    <TextView
        style="@style/PlayListDetailsMoreText"
        android:id="@+id/txtShareBottomSheetPlayListMore"
        android:text="@string/playlist_details_more_share"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rcvBottomSheetPlayListMore"/>

    <TextView
        style="@style/PlayListDetailsMoreText"
        android:id="@+id/txtEditBottomSheetPlayListMore"
        android:text="@string/playlist_details_more_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtShareBottomSheetPlayListMore"/>

    <TextView
        style="@style/PlayListDetailsMoreText"
        android:id="@+id/txtDeleteBottomSheetPlayListMore"
        android:text="@string/playlist_details_more_delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtEditBottomSheetPlayListMore"/>


</androidx.constraintlayout.widget.ConstraintLayout>