<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/player"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".player.ui.PlayerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/tbPlayer"
            style="@style/PlayerToolbar" />

        <ScrollView
            android:id="@+id/scvMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/colMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/trackImage"
                    style="@style/PlayerImageView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/big_indentation"
                    android:src="@drawable/placeholder_512"
                    app:layout_constraintDimensionRatio="h,1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_max="@dimen/track_image_max_size"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_max="@dimen/track_image_max_size" />

                <TextView
                    android:id="@+id/trackName"
                    style="@style/PlayerTxtHeading"
                    app:layout_constraintEnd_toEndOf="@+id/trackImage"
                    app:layout_constraintStart_toStartOf="@+id/trackImage"
                    app:layout_constraintTop_toBottomOf="@+id/trackImage"
                    tools:text="Yesterday (Remastered 2009)" />

                <TextView
                    android:id="@+id/artistName"
                    style="@style/PlayerTxtHeading"
                    android:layout_marginTop="@dimen/img_padding"
                    android:textSize="@dimen/heading_small_text_size"
                    app:layout_constraintEnd_toEndOf="@+id/trackImage"
                    app:layout_constraintStart_toStartOf="@+id/trackImage"
                    app:layout_constraintTop_toBottomOf="@+id/trackName"
                    tools:text="The Beatles" />

                <ImageView
                    android:id="@+id/trackPlay"
                    style="@style/PlayerImageView"
                    android:layout_marginTop="@dimen/big_indentation"
                    android:src="@drawable/track_play"
                    app:layout_constraintEnd_toEndOf="@+id/trackImage"
                    app:layout_constraintStart_toStartOf="@+id/trackImage"
                    app:layout_constraintTop_toBottomOf="@+id/artistName" />

                <ImageView
                    android:id="@+id/trackAddPlaylist"
                    style="@style/PlayerImageView"
                    android:src="@drawable/track_add_playlist"
                    app:layout_constraintBottom_toBottomOf="@+id/trackPlay"
                    app:layout_constraintStart_toStartOf="@+id/trackImage"
                    app:layout_constraintTop_toTopOf="@+id/trackPlay" />

                <ImageView
                    android:id="@+id/trackAddFavourites"
                    style="@style/PlayerImageView"
                    android:src="@drawable/track_add_favourites"
                    app:layout_constraintBottom_toBottomOf="@+id/trackPlay"
                    app:layout_constraintEnd_toEndOf="@+id/trackImage"
                    app:layout_constraintTop_toTopOf="@+id/trackPlay" />

                <TextView
                    android:id="@+id/trackPlayTime"
                    style="@style/PlayerTxtHeading"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/player_track_play_time"
                    android:textSize="@dimen/heading_small_text_size"
                    app:layout_constraintEnd_toEndOf="@+id/trackImage"
                    app:layout_constraintStart_toStartOf="@+id/trackImage"
                    app:layout_constraintTop_toBottomOf="@+id/trackPlay"
                    tools:text="0:30" />

                <TextView
                    android:id="@+id/trackTimeTitle"
                    style="@style/PlayerTxtTitles"
                    android:layout_marginTop="@dimen/big_indentation"
                    android:text="@string/track_time_title"
                    app:layout_constraintEnd_toStartOf="@+id/trackTime"
                    app:layout_constraintTop_toBottomOf="@+id/trackPlayTime" />

                <TextView
                    android:id="@+id/trackTime"
                    style="@style/PlayerTxt"
                    app:layout_constraintBaseline_toBaselineOf="@+id/trackTimeTitle"
                    app:layout_constraintStart_toEndOf="@+id/trackTimeTitle"
                    tools:text="5:35" />

                <TextView
                    android:id="@+id/collectionNameTitle"
                    style="@style/PlayerTxtTitles"
                    android:text="@string/collection_name_title"
                    app:layout_constraintEnd_toStartOf="@+id/collectionName"
                    app:layout_constraintTop_toBottomOf="@+id/trackTime" />

                <TextView
                    android:id="@+id/collectionName"
                    style="@style/PlayerTxt"
                    app:layout_constraintBaseline_toBaselineOf="@+id/collectionNameTitle"
                    app:layout_constraintStart_toEndOf="@+id/collectionNameTitle"
                    tools:text="Yesterday (Remastered 2009)" />

                <TextView
                    android:id="@+id/releaseDateTitle"
                    style="@style/PlayerTxtTitles"
                    android:text="@string/release_date_title"
                    app:layout_constraintEnd_toStartOf="@+id/releaseDate"
                    app:layout_constraintTop_toBottomOf="@+id/collectionName" />

                <TextView
                    android:id="@+id/releaseDate"
                    style="@style/PlayerTxt"
                    app:layout_constraintBaseline_toBaselineOf="@+id/releaseDateTitle"
                    app:layout_constraintStart_toEndOf="@+id/releaseDateTitle"
                    tools:text="1965" />

                <TextView
                    android:id="@+id/primaryGenreNameTitle"
                    style="@style/PlayerTxtTitles"
                    android:text="@string/primary_genre_name_title"
                    app:layout_constraintEnd_toStartOf="@+id/primaryGenreName"
                    app:layout_constraintTop_toBottomOf="@+id/releaseDate" />

                <TextView
                    android:id="@+id/primaryGenreName"
                    style="@style/PlayerTxt"
                    app:layout_constraintBaseline_toBaselineOf="@+id/primaryGenreNameTitle"
                    app:layout_constraintStart_toEndOf="@+id/primaryGenreNameTitle"
                    tools:text="Rock" />

                <TextView
                    android:id="@+id/countryTitle"
                    style="@style/PlayerTxtTitles"
                    android:text="@string/country_title"
                    app:layout_constraintEnd_toStartOf="@+id/country"
                    app:layout_constraintTop_toBottomOf="@+id/primaryGenreName" />

                <TextView
                    android:id="@+id/country"
                    style="@style/PlayerTxt"
                    app:layout_constraintBaseline_toBaselineOf="@+id/countryTitle"
                    app:layout_constraintStart_toEndOf="@+id/countryTitle"
                    tools:text="Великобритания" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <TextView
            android:id="@+id/txtPlaceholder"
            style="@style/TxtPlaceholder"
            android:text="@string/communication_problems"
            android:visibility="gone" />

    </LinearLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/yp_background"
        android:visibility="gone" />

    <include
        layout="@layout/bottomsheet_view"
        android:id="@+id/includedBottomSheet"
        android:visibility="visible"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>